6.15.0.3
    notifyme(1): Eliminated SIGSEGV if notifyme_6() returns NULL. Now prints useful error message.

6.15.0.2        2023-07-07T09:17:07-0600
    Documentation:
        * Feedtype webpage: Changed "FT31" to "FT30" for the "ANY" feedtype

6.15.0.1        2023-07-06T11:06:59-0600
    showSettings(1): Corrected bug in setting of default LDMHOME value

    notifyme(1): Replaced use of synchronous LDM-5 protocols with asynchronous LDM-6 protocols in
        order to greatly increase performance when used for a long time. As a
        consequence, this utility will no longer work with an upstream LDM-5 server.

6.14.6.1        2023-06-21T17:04:22-0600
    Build:
        * Eliminated all *.hin files (except "registry/registry.hin") and extractDecls(1) in order
          to make the development and build process more conventional and easier to understand

    ldmadmin(1):
        * In the error messages resulting from checking the queue, placed the pathname of the
          product-queue queue in quotes just in case it contains embedded whitespace
        * Added "pqmon -S" to the "showsettings" command

    Version 6 upstream LDM:
        * Added logging of a warning if sending or notifying about the oldest product in the queue
          because this indicates that the product-queue might be too small or the system too busy

    notifyme(1):
        * Added "-O" option to include product origin in output
        * Modified usage message to use LDM logging module

    keep_running(1):
        * Added a test for the executable's existance

    NOAAPort:
        * Configured the UDP socket for sharing the packets with other sockets and logging a
          warning if it couldn't
        * Added sh(1)-based noaaportBlender(1) to keep blender(1) and noaaportIngester(1) processes
          running
        * blender(1):
            * Frame is now output when the wait-time expires even if no subsequent frames arrive